[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="lat_alignment"
version="5.2.0"
authors= [{name ="Saianeesh Keshav Haridas"}]
description = "Software package for the alignment of a SO style Large Aperature Telescope (LAT)"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["LAT", "Simons Observatory", "Optical Alignment"]
license = {text = "BSD-2-Clause"}
classifiers = [ "Programming Language :: Python" ]
dependencies = ["scipy", "numpy", "matplotlib", "pyyaml", "megham", "pqdm"]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-homepage-copier",
]

[project.scripts]
lat_alignment = "lat_alignment.alignment:main"
ixb_send = "lat_alignment.ixb:main"

[tool.setuptools]
packages=["lat_alignment"]

[tool.setuptools.package-data]
"lat_alignment.data" = ["*.yaml", "*.csv"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
